--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@ header{
     height: 150px;
     background-color: #ffffff;
     display: grid;
-    grid-template-columns: repeat(3,33.3%);
+    grid-template-columns: repeat(2,50%);
 }
 
 .logo{
@@ -75,88 +75,148 @@ header{
     
 }
 
-.content > .menu{
+.nav {
+    max-width: 1280px;
+    height: 70px;
+    margin-inline: auto;
+  
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .logo {
+    font-size: 48px;
+  }
+
+.menu{
+    display: flex;
     justify-content: center;
     align-items: center;
-
+}
+  
+nav{
+    display: flex;
+    
 }
 
-.menu > ul{
-    list-style-type: none;
-    margin: 10px;
-}
+  .nav-list {
+    display: flex;
 
-.menu > ul > li{
+    
+    gap: 32px;
+    list-style: none;
+  }
+  
+  .nav-list a {
+    
+    font-size: 30px;
     color: #000000;
-    font-size: 24px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    
+    padding-block: 16px;
+  }
+  
+  .hero {
+    height: calc(100vh - 70px);
+    background: center / cover no-repeat url("./bg.jpg");
+  }
+  
+  .hamburger {
+    display: none;
+    border: none;
+    background: none;
+    border-top: 5px solid #ffffff;
+    cursor: pointer;
+  }
+  
+  .hamburger::after,
+  .hamburger::before {
+    content: " ";
+    display: block;
+    width: 30px;
+    height: 5px;
+    background: #fff;
+    margin-top: 5px;
+    position: relative;
+    transition: 0.3s;
+  }
+  
+  @media (max-width: 1300px) {
+    .hamburger {
+      display: block;
+      z-index: 1;
+    }
+  
+    .nav-list {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: #229485;
+      clip-path: circle(500px at 90% -15%);
+      transition: 1s ease-out;
+  
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      gap: 0;
+  
+      pointer-events: none;
+    }
+  
+    .nav-list a {
+      font-size: 24px;
+      opacity: 0;
+    }
+  
+    .nav-list li:nth-child(1) a {
+      transition: 0.5s 0.2s;
+    }
+  
+    .nav-list li:nth-child(2) a {
+      transition: 0.5s 0.4s;
+    }
+  
+    .nav-list li:nth-child(3) a {
+      transition: 0.5s 0.6s;
+    }
+  
+    /* Estilos ativos */
+  
+    .nav.active .nav-list {
+      clip-path: circle(1000px at 90% -15%);
+      pointer-events: all;
+    }
+  
+    .nav.active .nav-list a {
+      opacity: 1;
+    }
+  
+    .nav.active .hamburger {
+      position: fixed;
+      top: 26px;
+      right: 16px;
+      border-top-color: transparent;
+    }
+  
+    .nav.active .hamburger::before {
+      transform: rotate(135deg);
+    }
+  
+    .nav.active .hamburger::after {
+      transform: rotate(-135deg);
+      top: -7px;
+    }
 
-
-}
-
-.menu > ul > li:hover{
-    color: #001167;
-    font-weight: bold;
-    
-}
-.menu > ul > li:hover{
-    text-decoration: underline;
-    text-decoration-color: #001167;
-    
-}
-.numero{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.caixatel{
-    background-color: #25D366;
-    width: 250px;
-    height: 50px;
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.caixatel > a{
-    color: white;
-    text-decoration: none;
-    font-size: 24px;
-    font-weight: bold;
-    color: white
-}
-
-.caixatel > p{
-   
-    font-weight: bold;
-    color: white
-}
-
-.caixatel > p > i{
-    color: #000000;
-    font-size: 32px;
-    margin-right: 5px;
-}
+    .carrosel{
+        display: none;
+    }
+  }
 
 main{
     height: 100vh;
     background-color: #ffffff;
 }
-
-
-main > .principal{
-
-
-}
-
-
 
 .content2{
     display: flex;
