--- a/style/style.css
+++ b/style/style.css
@@ -109,7 +109,7 @@ header{
     border: none;
     padding: 10px 15px;
     border-radius: 5px;
-    background-color: #0187a7;
+    background-color: #001F1A;
     
 }
 
@@ -117,7 +117,7 @@ header{
     text-decoration: none;
     color: #fff;
     font-weight: 500;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
 }
 
 .mobile-menu-icon {
@@ -128,7 +128,7 @@ header{
     display: none;
 }
 
-@media screen and (max-width: 1139px) {
+@media screen and (max-width: 730px) {
     .nav-bar {
         padding: 1.5rem 4rem;
     }
@@ -165,6 +165,10 @@ header{
     }
     .open {
         display: block;
+    }
+
+    .principal{
+        display: none;
     }
 }
 
@@ -234,65 +238,7 @@ main{
     
 }
 
-.missao{
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
-}
-
-.missao > .contentMissao{
-    border: 1px solid black;
-    width: 50%;
-}
-.missao .contentMissao > h1{
-    text-align: center;
-    font-family: "Fjalla One", sans-serif;
-    color: #161d83;
-    font-size: 36px;
-}
-
-.missao .contentMissao > i{
-    font-size: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.missao > .parceiros{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    height: 250px;
-
-}
-
-
-.missao .parceiros > .parceirosCartorio{
-    height: 250px;
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-
-.missao .parceiros .parceirosCartorio > .Contagem{
-    width: 600px;
-    height: 130px;
-}
-
-
-.missao .parceiros .parceirosCartorio > .cartorioBH3{
-    width: 600px;
-    height: 130px;
-}
-
-.missao .parceiros .parceirosCartorio > .cartorioBH2{
-    width: 550px;
-    height: 100px;
-}
 
 footer{
     height: 200px;
