--- a/style/mediaQuery280.css
+++ b/style/mediaQuery280.css
@@ -1,4 +1,60 @@
 @media screen and (max-width: 730px){
+
+        .nav-bar {
+            padding: 1.5rem 4rem;
+        }
+        .nav-item {
+            display: none;
+        }
+        .login-button {
+            display: none;
+        }
+        .mobile-menu-icon {
+            display: block;
+        }
+        .mobile-menu-icon button {
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+        }
+        .mobile-menu ul {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            padding-bottom: 1rem;
+        }
+        .mobile-menu .nav-item {
+            display: block;
+            padding-top: 1.2rem;
+        }
+        .mobile-menu .login-button {
+            display: block;
+            padding: 1rem 2rem;
+        }
+        .mobile-menu .login-button button {
+            width: 100%;
+        }
+        .open {
+            display: block;
+        }
+
+
+        .carousel-inner .carousel-item:nth-child(1) img {
+            /* Substitua o caminho pela imagem em modo retrato desejada */
+            content: url('../imagens/consultarProtestoRetrato.jpg');
+            /* Ajuste a largura e altura conforme necessário */
+          }
+        .carousel-inner .carousel-item:nth-child(2) img {
+            /* Substitua o caminho pela imagem em modo retrato desejada */
+            content: url('../imagens/consultarProtestoRetrato.jpg');
+            /* Ajuste a largura e altura conforme necessário */
+          }
+        .carousel-inner .carousel-item:nth-child(3) img {
+            /* Substitua o caminho pela imagem em modo retrato desejada */
+            content: url('../imagens/consultarProtestoRetrato.jpg');
+            /* Ajuste a largura e altura conforme necessário */
+          }
+
     .redes-sociais{
         height: 50px;
         background-color: #85aaa9;
@@ -14,6 +70,8 @@
         justify-content: space-around;
         align-items: center;
     }
+
+
 
     footer{
         height: 350px;
