--- a/style/mediaQuery280.css
+++ b/style/mediaQuery280.css
@@ -55,6 +55,8 @@
             /* Ajuste a largura e altura conforme necessário */
           }
 
+   
+
     .redes-sociais{
         height: 50px;
         background-color: #85aaa9;
@@ -67,6 +69,13 @@
         
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .segundoQuemSomos{
+        display: flex;
+        flex-direction: column-reverse;
         justify-content: space-around;
         align-items: center;
     }
