--- a/style/mediaQuery280.css
+++ b/style/mediaQuery280.css
@@ -1,43 +1,5 @@
 @media screen and (max-width: 800px){
 
-        .nav-bar {
-            padding: 1.5rem 4rem;
-        }
-        .nav-item {
-            display: none;
-        }
-        .login-button {
-            display: none;
-        }
-        .mobile-menu-icon {
-            display: block;
-        }
-        .mobile-menu-icon button {
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-        }
-        .mobile-menu ul {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            padding-bottom: 1rem;
-        }
-        .mobile-menu .nav-item {
-            display: block;
-            padding-top: 1.2rem;
-        }
-        .mobile-menu .login-button {
-            display: block;
-            padding: 1rem 2rem;
-        }
-        .mobile-menu .login-button button {
-            width: 100%;
-        }
-        .open {
-            display: block;
-        }
-
 
         .carousel-inner .carousel-item:nth-child(1) img {
             /* Substitua o caminho pela imagem em modo retrato desejada */
@@ -56,6 +18,63 @@
           }
 
    
+    
+    header{
+    height: 100%;
+    }   
+    
+    .content{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+
+    }
+    .content >h1{
+        padding: 10px;
+        text-align: center;
+    }
+
+    .logoMenu{
+        width: 25vh;
+        margin: auto;
+        
+    }
+    menu{
+        display: none;
+    }
+
+    menu > ul{
+        list-style-type: none;
+    }
+
+    menu > ul > li > a{
+        display: block;
+        padding: 10px;
+        text-align: center;
+        text-decoration: none;
+        background-color: #00968A;
+        color:white;
+        border: 1px solid #104A55 ;
+    }
+
+    menu > ul > li > a:hover{
+        background-color: #85aaa9;
+    }
+
+    #borger{
+        display: block;
+        background-color: #104A55;
+        color: white;
+        text-align: center;
+        padding: 5px;
+    }
+
+    #borger:hover{
+        background-color: #d7fcfa;
+        color: black;
+        cursor: pointer;
+        border-top: 1px solid #104A55;
+    }
 
     .redes-sociais{
         height: 50px;
