--- a/style/style.css
+++ b/style/style.css
@@ -54,79 +54,49 @@ header{
 }
 
 .content{
-    background-color: #bfccca;
+    height: 100%;
+}
+.content >h1{
+    padding: 10px;
+    text-align: center;
 }
 
-.nav-bar {
-    display: flex;
-    justify-content: space-between;
-    padding: 1.5rem 6rem;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-}
-.content{
-    height: 300px;
-}
-
-.logo img {
-    width: 250px;
-}
-
-.nav-list {
-    display: flex;
-    align-items: center;
-}
-
-.nav-list ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-}
-
-.nav-item {
-    margin: 0 15px;
-}
-
-.nav-link {
-    text-decoration: none;
-    font-size: 1.5rem;
-    color: #274F4E;
-    font-weight: 400;
-    
-}
-
-.login-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.login-button button {
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    background-color: #001F1A;
-    
-}
-
-.login-button button a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: 500;
-    font-size: 1.5rem;
-}
-
-.mobile-menu-icon {
+menu{
     display: none;
 }
 
-.mobile-menu {
-    display: none;
+menu > ul{
+    list-style-type: none;
 }
+
+menu > ul > li > a{
+    display: block;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    background-color: #00968A;
+    color:white;
+    border: 1px solid #104A55 ;
+}
+
+menu > ul > li > a:hover{
+    background-color: #85aaa9;
+}
+
+#borger{
+    display: block;
+    background-color: #104A55;
+    color: white;
+    text-align: center;
+    padding: 5px;
+}
+
+#borger:hover{
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
 
 
 
